<resources>
    <string name="app_name">我的</string>
    <string name="text_edit">编辑</string>
    <string name="text_delete">删除</string>
    <string name="text_add">添加</string>
    <string name="text_yes">是</string>
    <string name="text_no">否</string>
    <string name="text_isLoginOut">是否退出该账号？</string>
    <string name="text_submit">提交</string>
    <string name="text_x">x</string>
    <string name="text_rmb">¥</string>
    <string name="text_sendcode_tips">如果您没有收到虚拟商品兑换码或更改其他手机接收信息，请正确输入接收用手机号码并确认发送。</string>
    <string name="text_sendcode_tips0">系统最多可重新发送5次兑换码提示信息。</string>
    <string name="title_OrderRefundActivity">订单退款</string>
    <string name="title_ApplyRefundActivity">商品退款</string>
    <string name="title_ApplyReturnActivity">商品退货</string>
    <string name="text_refund1">退款原因</string>
    <string name="text_refund2">退款金额</string>
    <string name="text_refund3">退款说明</string>
    <string name="text_refund4">退款凭证</string>
    <string name="text_refund5">最多可退金额</string>
    <string name="text_refund6">退货数量</string>
    <string name="text_refund7">最多可退数量</string>
    <string name="hint_text_refund">申请原因！</string>
    <string name="hint_text_refund1">取消订单，全部退款</string>
    <string name="hint_text_refund2">请输入您要退款的说明文字</string>
    <string name="title_OrderEvaluateActivity">评价订单</string>
    <string name="title_EvaluateAgainActivity">追加评价</string>
    <string name="button_text_submitEvaluate">提交评价</string>
    <string name="text_anonymity">匿名</string>
    <string name="text_evaluate">商品评分</string>
    <string name="text_showPic">晒图</string>
    <string name="hint_text_evaluate">亲，写点什么吧，您的意见对其他买家有很大帮助！</string>
    <string name="title_ReduceCashActivity">余额提现</string>
    <string name="label_text_reduce">提现余额</string>
    <string name="tabs_text_reduce1">邀请码</string>
    <string name="button_text_reduce1">立即绑定</string>
    <string name="tabs_text_reduce2">提现申请</string>
    <string name="button_text_reduce2">提交申请</string>
    <string name="hint_text_reduce1_ed1">朋友邀请码</string>
    <string name="hint_text_reduce2_ed1">提现金额</string>
    <string name="hint_text_reduce2_ed2">收款方</string>
    <string name="hint_text_reduce2_ed3">收款账号</string>
    <string name="hint_text_reduce2_ed4">用户名</string>
    <string name="hint_text_reduce2_ed5">支付密码</string>
    <string name="title_OrderDeliveryActivity">物流信息</string>
    <string name="text_deliveryInfo">物流公司：</string>
    <string name="text_deliveryNum">运单号码：</string>
    <string name="text_tips1">以上部分信息来自于第三方，仅供参考</string>
    <string name="text_tips2">如需准确信息可联系卖家或物流公司</string>
    <string name="tabs_text_physical">实物订单</string>
    <string name="tabs_text_virtual">虚拟订单</string>
    <string name="tabs_text_buyer">买家手机</string>
    <string name="tips_text_virtual">有效期至</string>
    <string name="tabs_text_all">全部</string>
    <string name="tabs_text_pay">待付款</string>
    <string name="tabs_text_haverst">待收货</string>
    <string name="tabs_text_haverst2">待自提</string>
    <string name="tabs_text_uncomments">待评价</string>
    <string name="tabs_text_unuse">待使用</string>
    <string name="hint_text_search">请输入商品标题或者订单号进行搜索</string>
    <string name="btn_text_appraiseOrder">评价订单</string>
    <string name="btn_text_harvestOrder">确认收货</string>
    <string name="btn_text_payOrder">订单支付</string>
    <string name="btn_text_cancelOrder">取消订单</string>
    <string name="text_title_order_empty">您还没有相关的订单</string>
    <string name="text_sub_title_order_empty">可以去看看哪些想要买的</string>
    <string name="title_OrderInformation">订单详情</string>
    <string name="text_phsi_0">交易状态</string>
    <string name="text_phsi_1">买家留言</string>
    <string name="text_phsi_2">发票信息</string>
    <string name="text_phsi_3">付款方式</string>
    <string name="text_phsi_4">联系客服</string>
    <string name="text_phsi_5">拨打电话</string>
    <string name="text_phsi_6">优惠</string>
    <string name="text_phsi_7">运费</string>
    <string name="text_phsi_8">实付款(含运费)</string>
    <string name="text_phsi_9">退款/退货中…</string>
    <string name="text_phsi_10">订单编号：</string>
    <string name="text_phsi_11">创建时间：</string>
    <string name="text_phsi_12">付款时间：</string>
    <string name="text_phsi_13">发货时间：</string>
    <string name="text_phsi_14">完成时间：</string>
    <string name="text_phsi_15">收货地址：</string>
    <string name="text_phsi_16">收货人：</string>
    <string name="text_phsi_17">平台折扣</string>
    <string name="tabs_text_product">商品收藏</string>
    <string name="tabs_text_shops">店铺收藏</string>
    <string name="text_title_collect_empty">您还没有关注任何店铺</string>
    <string name="text_sub_title_collect_empty">可以去看看哪些店铺值得收藏</string>
    <string name="text_title_collectgoods_empty">您还没有关注任何商品</string>
    <string name="text_sub_title_collectgoods_empty">可以去看看哪些商品值得收藏</string>
    <string name="title_accountSurplusActivity">预存款账户</string>
    <string name="label_text_surplus">预存款余额</string>
    <string name="tabs_text_surplus1">账户余额</string>
    <string name="tabs_text_surplus2">充值明细</string>
    <string name="tabs_text_surplus3">余额提现</string>
    <string name="text_title_log_empty">您尚无预存款收支信息</string>
    <string name="text_sub_title_log_empty">使用商城预存款结算更方便</string>
    <string name="text_title_charge_empty">您尚未充值过预存款</string>
    <string name="text_title_pdcash_empty">您尚未提现过预存款</string>
    <string name="label_text_card1">充值卡余额</string>
    <string name="label_text_card2">请输入已知平台充值卡号码</string>
    <string name="label_text_card3">充值后可以在购物车结算时选取使用充值卡余额进行支付</string>
    <string name="label_text_card4">充值卡号</string>
    <string name="hint_text_card4">请输入平台充值卡号</string>
    <string name="text_title_card_empty">您尚无充值卡使用信息</string>
    <string name="text_sub_title_card_empty">使用充值卡充值余额结算更方便</string>
    <string name="tabs_text_coupon1">我的优惠券</string>
    <string name="tabs_text_coupon2">领取优惠券</string>
    <string name="label_text_coupon1">请输入已获得的代金券卡密领取代金券</string>
    <string name="label_text_coupon2">领取代金券后可以在购买商品下单时选择符合使用条件的代金券抵扣订单金额</string>
    <string name="label_text_coupon3">已失效的券</string>
    <string name="label_text_coupon4">代金券卡密</string>
    <string name="hint_text_coupon4">请输入20位店铺代金券卡密号</string>
    <string name="label_text_packet1">请输入已知平台红包卡密号码</string>
    <string name="label_text_packet2">确认生效后可在购物车使用抵扣订单金额</string>
    <string name="label_text_packet3">已失效红包</string>
    <string name="label_text_packet4">红包卡密</string>
    <string name="hint_text_packet4">请输入平台红包卡密号</string>
    <string name="text_title_coupon_empty">您还没有相关的代金券</string>
    <string name="text_sub_title_coupon_empty">店铺代金券可享受商品折扣</string>
    <string name="title_PdcashInformationActivity">提现详情</string>
    <string name="title_cardSurplusActivity">预存款账户</string>
    <string name="tabs_text_cardsurplus1">充值卡余额</string>
    <string name="tabs_text_cardsurplus2">充值卡充值</string>
    <string name="tabs_text_storePacket1">我的红包</string>
    <string name="tabs_text_storePacket2">领取红包</string>
    <string name="text_title_packet_empty">您还没有相关的红包</string>
    <string name="text_sub_title_packet_empty">平台红包可抵扣现金结算</string>
    <string name="title_vipIntegralActivity">积分明细</string>
    <string name="label_text_myIntergral">我的积分</string>
    <string name="title_footprintActivity">我的足迹</string>
    <string name="text_clearn">清空</string>
    <string name="text_title_footprint_empty">暂无您的浏览记录</string>
    <string name="text_sub_title_footprint_empty">可以去看看哪些想要买的</string>
    <string name="tabs_text_refund">退货列表</string>
    <string name="tabs_text_refundMoney">退款列表</string>
    <string name="text_refundInformation">退款详情</string>
    <string name="text_returnInformation">退货详情</string>
    <string name="text_title_refund_empty">您还没有退款信息</string>
    <string name="text_sub_title_refund_empty">已购订单详情可申请退款</string>
    <string name="text_title_return_empty">您还没有退货信息</string>
    <string name="text_sub_title_return_empty">已购订单详情可申请退货</string>
    <string name="title_text_distributionActivity">分销管理</string>
    <string name="tabs_text_one">一级下线</string>
    <string name="tabs_text_two">二级下线</string>
    <string name="tabs_text_three">三级下线</string>
    <string name="title_addressManagerActivity">地址管理</string>
    <string name="button_text_addAddress">添加新地址</string>
    <string name="label_text_defaultAddress">默认地址</string>
    <string name="title_editAddressActivity">编辑地址</string>
    <string name="title_addAddressActivity">新增地址</string>
    <string name="text_saveAddress">保存地址</string>
    <string name="label_name">收货人姓名</string>
    <string name="label_phone">联系手机</string>
    <string name="label_block">地区选择</string>
    <string name="label_address">详细地址</string>
    <string name="label_default_address">默认地址</string>
    <string name="hint_text_name">请输入收货人姓名</string>
    <string name="hint_text_phone">请输入联系手机</string>
    <string name="hint_text_block">点击选择地区</string>
    <string name="hint_text_address">请输入详细地址</string>
    <string name="title_resetPasswordActivity">修改登录密码</string>
    <string name="tips_text_resetPassword">登录密码由 6-20个大小写英文字母、符号或数字组成</string>
    <string name="text_reset_password">设置密码</string>
    <string name="text_reset_password2">密码确认</string>
    <string name="hint_text_reset_password">输入登陆密码</string>
    <string name="hint_text_reset_password2">在次输入登录密码</string>
    <string name="tips_text_youPhone">您当前的手机号是：</string>
    <string name="bt_text_next">下一步</string>
    <string name="dialog_text_tips">您还未设置支付密码，是否前往设置支付密码？</string>
    <string name="tips_text_checkAuth">小提示：通过手机验证后，可用于快速找回登录密码及支付密码，接收账户资产变更提醒。</string>
    <string name="title_resetPayPasswordActivity">修改支付密码</string>
    <string name="title_resetPhoneActivity">绑定新的手机</string>
    <string name="tips_text_change"><u>通过支付密码来验证</u></string>
    <string name="title_feedBackActivity">反馈建议</string>
    <string name="hint_feedback">请描述下您遇到的问题</string>
    <string name="title_messageActivity">消息列表</string>
    <string name="text_title_msg_empty">您还没有和任何人联系过</string>
    <string name="text_sub_title_msg_empty">对话可在此找到最近联系的客服</string>
    <string name="title_propertyActivity">我的财产</string>
    <string name="title_loginActivity">会员登录</string>
    <string name="text_login">登录</string>
    <string name="tabs_login_phone">密码登陆</string>
    <string name="tabs_login_puk">验证码登陆</string>
    <string name="label_account">手机号</string>
    <string name="label_password">密码</string>
    <string name="ed_hint_account">请输入手机号</string>
    <string name="ed_hint_password">请输入登录密码</string>
    <string name="text_psdCode">动态码</string>
    <string name="text_getPsdCode"><u>获取动态码</u></string>
    <string name="hint_text_psdCode">请输入手机短信动态码</string>
    <string name="text_authCode">验证码</string>
    <string name="hint_text_authCode">请输入4位验证码</string>
    <string name="text_protocol">用户注册协议</string>
    <string name="cb_agree">同意</string>
    <string name="text_login_tips">手机登录注册统一入口，第一次登录默认注册，登录后到我的商城中设置密码</string>
    <string name="label_click_login">请登录</string>
    <string name="label_myshop">我的商城</string>
    <string name="me_headitem_item1">商品收藏</string>
    <string name="me_headitem_item2">店铺收藏</string>
    <string name="me_headitem_item3">我的足迹</string>
    <string name="title_settingActivity">设置</string>
    <string name="set_item_item1">登录密码</string>
    <string name="set_item_item2">手机验证</string>
    <string name="set_item_item3">支付密码</string>
    <string name="set_item_item4">用户反馈</string>
    <string name="set_item_item5">软件版本</string>
    <string name="set_item_item6">安全退出</string>
    <string name="set_subitem_item1">不安全</string>
    <string name="set_subitem_item2">未验证</string>
    <string name="set_subitem_item3">已验证</string>
    <string name="set_subitem_item4">未设置</string>
    <string name="set_subitem_item5">已设置</string>
    <string name="set_desc_item1">建议您定期更改密码以保护账户安全</string>
    <string name="set_desc_item2">若您的手机已经丢失或停用,请立即修改更换</string>
    <string name="set_desc_item3">建议您设置复杂的支付密码保护账户金额安全</string>
    <string name="set_desc_item4">您在使用中遇到的问题与建议可向我们反馈</string>
</resources>