<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_phoneContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_lb_phone"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:gravity="end"
                android:text="@string/label_account"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginEnd="12dp"
                android:gravity="center_vertical"
                android:hint="@string/ed_hint_account"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/text_16"
                app:met_errorColor="@color/red"
                app:met_floatingLabel="none"
                app:met_floatingLabelText="用户名"
                app:met_hideUnderline="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_panel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_phoneContent">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_lb_psdCode"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:gravity="end"
                    android:text="@string/text_psdCode"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/ed_password"
                    app:layout_constraintEnd_toStartOf="@id/ed_password"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ed_password" />

                <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/ed_msgCode"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_text_psdCode"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/text_16"
                    app:met_errorColor="@color/red"
                    app:met_floatingLabel="none"
                    app:met_floatingLabelText="验证码"
                    app:met_hideUnderline="true" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_getPsdCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:padding="6dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="12dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/text_getPsdCode"
                    android:visibility="invisible" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_hight"
                android:background="@color/line_color" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_margin="24dp"
            android:background="@drawable/xui_config_bg_blue_btn"
            android:enabled="false"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/bt_text_next"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_panel" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:text="@string/tips_text_checkAuth"
            app:layout_constraintEnd_toEndOf="@id/btn_submit"
            app:layout_constraintStart_toStartOf="@id/btn_submit"
            app:layout_constraintTop_toBottomOf="@id/btn_submit" />

    </android.support.constraint.ConstraintLayout>
</layout>